link to home view added in the sidebar, z-index fixes

--- a/Notes.Net/wwwroot/css/standard.css
+++ b/Notes.Net/wwwroot/css/standard.css
@@ -9,7 +9,7 @@
     position: fixed;
     top: 0;
     left: -250px;
-    z-index: 999;
+    z-index: 9999;
     transition: all 0.3s;
     background-color: #7386D5;
     color: #fff;
@@ -34,7 +34,7 @@
     width: 100vw;
     height: 100vh;
     background: rgba(0, 0, 0, 0.7);
-    z-index: 998;
+    z-index: 9998;
     opacity: 0;
     transition: all 0.5s ease-in-out;
 }
@@ -121,4 +121,9 @@
 
 .mousehover:hover > .hide {
     display: inline;
+}
+
+.link-unstyled, .link-unstyled:link, .link-unstyled:hover {
+    color: inherit;
+    text-decoration: inherit;
 }
